--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.MineField"
+            android:name=".ui.MineFieldActivity"
             android:label="@string/title_activity_mine_field"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
