--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,21 +8,25 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/mine"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".ui.MineFieldActivity"
+            android:name=".ui.SplashActivity"
             android:label="@string/title_activity_mine_field"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.MineFieldActivity"
+            android:label="@string/title_activity_mine_field"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
             android:name=".ui.SettingsActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
