--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 *.iml
 .gradle
 /local.properties
+/.idea/*.*
 /.idea/caches
+/.idea/codeStyles
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
