--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.SplashActivity"
+            android:name=".ui.activity.SplashActivity"
             android:label="@string/title_activity_mine_field"
             android:theme="@style/SplashTheme"
             android:exported="true">
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.MineFieldActivity"
+            android:name=".ui.activity.MineFieldActivity"
             android:label="@string/title_activity_mine_field"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
