--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 32
@@ -9,8 +10,8 @@ android {
         applicationId "com.msmikeescom.minesweeper"
         minSdkVersion 26
         targetSdkVersion 32
-        versionCode 3
-        versionName "1.01"
+        versionCode 1
+        versionName "1.00"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,35 +27,52 @@ android {
 }
 
 def roomVersion = "2.4.2"
+def navigationVersion = "2.4.2"
+def lifecycleVersion = "2.4.1"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation platform('com.google.firebase:firebase-bom:30.1.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+    // Google Libraries
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
-    implementation 'androidx.appcompat:appcompat:1.6.0-alpha04'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.7.0-alpha02'
 
-    // Room components
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+    // Room
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
-    androidTestImplementation "androidx.room:room-testing:$roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$roomVersion"
 
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'org.slf4j:slf4j-api:1.7.32'
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
+
+    // Material
+    implementation "androidx.core:core-ktx:1.8.0"
+    implementation 'androidx.appcompat:appcompat:1.6.0-alpha04'
     implementation 'androidx.annotation:annotation:1.3.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    annotationProcessor 'androidx.room:room-compiler:2.4.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    // Lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
+
+    // Test
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.5.0-alpha03'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha06'
-    implementation "androidx.core:core-ktx:1.7.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    androidTestImplementation "androidx.room:room-testing:$roomVersion"
+    androidTestImplementation 'androidx.test:runner:1.5.0-alpha04'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha07'
+
+    // Others
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.21"
+    implementation 'org.slf4j:slf4j-api:1.7.32'
+
 }
 repositories {
     mavenCentral()
