--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,14 @@ android {
 
 def roomVersion = "2.4.2"
 def navigationVersion = "2.4.2"
-def lifecycleVersion = "2.4.1"
+def lifecycleVersion = "2.5.0-rc02"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
     // Google Libraries
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
@@ -46,6 +50,7 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
+    implementation 'androidx.preference:preference-ktx:1.2.0'
     kapt "androidx.room:room-compiler:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
 
@@ -55,8 +60,8 @@ dependencies {
 
     // Material
     implementation "androidx.core:core-ktx:1.8.0"
-    implementation 'androidx.appcompat:appcompat:1.6.0-alpha04'
-    implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0-alpha05'
+    implementation 'androidx.annotation:annotation:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Lifecycle
