--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.SplashActivity"
             android:exported="true"
             android:label="@string/title_activity_mine_field"
@@ -20,12 +23,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.MainActivity"
-            android:label="@string/title_activity_mine_field"
+            android:name=".ui.activity.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ui.activity.MineFieldActivity"
+            android:exported="false"
             android:label="@string/title_activity_mine_field"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.activity.SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ui.activity.RecordsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_records"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
