--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@
 /.idea/*.*
 /.idea/caches
 /.idea/codeStyles
+/.idea/gradle.xml
 /.idea/libraries
+/.idea/misc.xml
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
