--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,13 +5,13 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 33
     defaultConfig {
         applicationId "com.msmikeescom.minesweeper"
+        compileSdk 34
         minSdkVersion 26
         targetSdkVersion 33
         versionCode 6
-        versionName "2.1"
+        versionName "2.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,23 +26,23 @@ android {
     }
 }
 
-def roomVersion = "2.4.2"
-def navigationVersion = "2.5.0"
-def lifecycleVersion = "2.6.0-alpha01"
+def roomVersion = "2.6.1"
+def navigationVersion = "2.7.7"
+def lifecycleVersion = "2.8.4"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.13.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
     // Google Libraries
-    implementation 'com.google.android.gms:play-services-auth:20.2.0'
-    implementation 'com.google.android.material:material:1.7.0-alpha02'
+    implementation 'com.google.android.gms:play-services-auth:21.2.0'
+    implementation 'com.google.android.material:material:1.12.0'
 
     // Firebase
-    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation platform('com.google.firebase:firebase-bom:33.2.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
@@ -51,7 +51,7 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
-    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
     kapt "androidx.room:room-compiler:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
 
@@ -60,9 +60,9 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
 
     // Material
-    implementation "androidx.core:core-ktx:1.8.0"
-    implementation 'androidx.appcompat:appcompat:1.6.0-alpha05'
-    implementation 'androidx.annotation:annotation:1.4.0'
+    implementation "androidx.core:core-ktx:1.13.1"
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.annotation:annotation:1.8.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Lifecycle
@@ -72,8 +72,8 @@ dependencies {
     // Test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
-    androidTestImplementation 'androidx.test:runner:1.5.0-alpha04'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha07'
+    androidTestImplementation 'androidx.test:runner:1.6.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
 }
 repositories {
