--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'androidx.activity:activity:1.9.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
     // Google Libraries
@@ -66,11 +67,12 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
 
-    // Material
+    // AndroidX
     implementation "androidx.core:core-ktx:1.13.1"
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.annotation:annotation:1.8.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-splashscreen:1.0.1'
 
     // Lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
